--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,24 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sigridagersnapbomnielsen/opt/anaconda3/lib/python3.9/site-packages/nilearn/datasets/__init__.py:93: FutureWarning: Fetchers from the nilearn.datasets module will be updated in version 0.9 to return python strings instead of bytes and Pandas dataframes instead of Numpy arrays.\n",
-      "  warn(\"Fetchers from the nilearn.datasets module will be \"\n",
-      "/Users/sigridagersnapbomnielsen/opt/anaconda3/lib/python3.9/site-packages/nilearn/glm/__init__.py:55: FutureWarning: The nilearn.glm module is experimental. It may change in any future release of Nilearn.\n",
-      "  warn('The nilearn.glm module is experimental. '\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
        "\n",
-       "            <div id=\"vOtxQ9\"></div>\n",
+       "            <div id=\"avgd1t\"></div>\n",
        "            <script type=\"text/javascript\" data-lets-plot-script=\"library\">\n",
        "                if(!window.letsPlotCallQueue) {\n",
        "                    window.letsPlotCallQueue = [];\n",
@@ -43,9 +33,9 @@
        "                        var div = document.createElement(\"div\");\n",
        "                        div.style.color = 'darkred';\n",
        "                        div.textContent = 'Error loading Lets-Plot JS';\n",
-       "                        document.getElementById(\"vOtxQ9\").appendChild(div);\n",
+       "                        document.getElementById(\"avgd1t\").appendChild(div);\n",
        "                    };\n",
-       "                    var e = document.getElementById(\"vOtxQ9\");\n",
+       "                    var e = document.getElementById(\"avgd1t\");\n",
        "                    e.appendChild(script);\n",
        "                })()\n",
        "            </script>\n",
@@ -144,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -334,8 +324,8 @@
       "- Upper transition bandwidth: 0.30 Hz (-6 dB cutoff frequency: 0.85 Hz)\n",
       "- Filter length: 2519 samples (660.230 sec)\n",
       "\n",
-      "Loading /Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-01/NP-Ph2-305-2021-11-01/2021-11-01_003.snirf\n",
-      "Reading 0 ... 7746  =      0.000 ...  2030.227 secs...\n"
+      "Loading /Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-04/NP-Ph2-124-2021-11-04/2021-11-04_004.snirf\n",
+      "Reading 0 ... 8929  =      0.000 ...  2340.291 secs...\n"
      ]
     },
     {
@@ -344,7 +334,7 @@
      "text": [
       "ic| 'Apply short channel regression.'\n",
       "ic| \"Do temporal derivative distribution repair on:\": 'Do temporal derivative distribution repair on:'\n",
-      "    od_corrected: <RawSNIRF | 2021-11-01_003.snirf, 232 x 7747 (2030.2 s), ~14.0 MB, data loaded>\n",
+      "    od_corrected: <RawSNIRF | 2021-11-04_004.snirf, 232 x 8930 (2340.3 s), ~16.1 MB, data loaded>\n",
       "ic| 'Convert to haemoglobin with the modified beer-lambert law.'\n",
       "ic| 'Apply further data cleaning techniques and extract epochs.'\n"
      ]
@@ -385,7 +375,7 @@
     "subjects = [\n",
     "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-01/NP-Ph2-303-2021-11-01/2021-11-01_001.snirf\",\n",
     "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-01/NP-Ph2-304-2021-11-01/2021-11-01_002.snirf\",\n",
-    "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-01/NP-Ph2-305-2021-11-01/2021-11-01_003.snirf\",\n",
+    "    #\"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-01/NP-Ph2-305-2021-11-01/2021-11-01_003.snirf\",\n",
     "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-04/NP-Ph2-124-2021-11-04/2021-11-04_004.snirf\",\n",
     "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-04/NP-Ph2-200-2021-11-04/2021-11-04_003.snirf\",\n",
     "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-04/NP-Ph2-201-2021-11-04/2021-11-04_002.snirf\",\n",
@@ -393,7 +383,7 @@
     "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-08/NP-Ph2-118-2021-11-08/2021-11-08_003.snirf\",\n",
     "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-08/NP-Ph2-129-2021-11-08/2021-11-08_001.snirf\",\n",
     "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-08/NP-Ph2-400-2021-11-08/2021-11-08_002.snirf\",\n",
-    "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-11/NP-Ph2-119-2021-11-11/2021-11-11_001.snirf\",\n",
+    "    #\"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-11/NP-Ph2-119-2021-11-11/2021-11-11_001.snirf\",\n",
     "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-11/NP-Ph2-123-2021-11-11/2021-11-11_001.snirf\",\n",
     "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-11/NP-Ph2-402-2021-11-11/2021-11-11_002.snirf\",\n",
     "    \"/Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NCPE-2021-11-15/NP-Ph2-203-2021-11-15/2021-11-15_002.snirf\",\n",
@@ -410,9 +400,9 @@
     "    # Analyse data and return both ROI and channel results\n",
     "    raw_haemo, roi, channel, con = individual_analysis(\n",
     "        sub, idx, \n",
-    "        roi_1=[[15,14], [15,12], [15,11], [16,14], [16,13], [16,16], [16,15], [31,15], [31,16],[31,30], [29,13], [29,16], [29,28], [30,16], [30,28], [30,30], [30,29], [32,30], [32,29], [32,27], [14,11], [14,14], [14,13], [27,28], [27,29], [27,26]\n",
+    "         roi_1=[[15,14], [15,15], [14,14], [14,13], [16,14], [16,13], [16,15], [16,16], [29,13], [29,16], [29,28], [31,15], [31,16], [31,30], [30,16], [30,28], [30,30], [30,29], [27,28], [27,29], [32,30], [32,29]\n",
     "        ], # visual\n",
-    "        roi_2=[[11,10], [11,8], [11,9], [9,6], [9,10], [9,8], [7,6], [7,8], [7,5],[10,8], [10,5], [10,9], [10,7], [8,5], [8,7], [12,7], [12,9], [21,20], [21,22], [25,22], [25,24], [23,22], [23,20], [23,24], [23,23], [22,20], [22,23], [22,21], [26,24], [26,23], [26,25], [24,21], [24,23], [24,25]\n",
+    "        roi_2=[[7,4], [7,6], [9,6], [9,8], [9,10], [11,8], [11,10], [11,11], [13,10], [13,11], [13,12], [22,19], [22,21], [22,23], [24,21], [24,23], [24,25], [26,23], [26,25], [26,26], [28,26], [28,25], [28,27] \n",
     "        ], #auditory \n",
     "        contrasts_1=['70', '71', '72'], contrasts_2=['61', '62', '63'])\n",
     "\n",
